<resources>
    <string name="app_name">Frets</string>
    <string name="action_settings">Settings</string>
    <string name="file">File:</string>
    <string name="play">Play</string>
    <string name="sdcard">/sdcard</string>
    <string name="external_card">ext_card/</string>
    <string name="share_file">Share…</string>
    <string name="search_hint">Search by Song name</string>
    <string name="up">Up</string>
    <string name="search_files">Search</string>
    <string name="refresh">Refresh</string>
    <string name="bpm">BPM:</string>
    <string name="no_notes">This track has no Notes, please select another</string>
    <string name="track_loaded">Track loaded.</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="password">Password</string>
    <string name="forgot_password">Reset Password</string>
    <string name="register">Register</string>
    <string name="reset_msg">A reset email will be sent…</string>
    <string name="create_user_success">New User Created</string>
    <string name="enter_email_txt">Please enter a valid email address</string>
    <string name="enter_pwd_txt">Please enter a password</string>
    <string name="login_txt">Please enter a valid email address and a password to login.</string>
    <string name="create_user_txt">Please enter a valid email address and a password to register.</string>
    <string name="login_register">Login/Sign Up</string>
    <string name="invalid_pwd">Incorrect password - please try again</string>
    <string name="authenticating">Authenticating…</string>
    <string name="connection_error">Network connection failed. Please try again when you are connected.</string>
    <string name="max_retries_reached">Sorry - maximum retries reached.</string>
    <string name="oops">Oops!! Something went wrong. Soz</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="email_taken">This email is already registered.  Please login instead.</string>
    <string name="invalid_email">Please enter a valid email address.</string>
    <string name="user_does_not_exist">Please enter a valid email address.  We don\'t have this one on our system</string>
    <string name="action_export">Export…</string>
    <string name="no_track">No track selected. Please select track to export</string>
    <string name="no_frets">No frets (yet)…</string>
    <string name="import_midi">Import Midi File…</string>
    <string name="buffering_msg">Loading…</string>
    <string name="invalid_file_type">This is not a Midi file.</string>
    <string name="description">Description</string>
    <string name="song_name">Song Name</string>
    <string name="song_details">Please enter the Song Details</string>
    <string name="play_button_content_description">Play Button</string>
    <string name="user_name">User Name</string>
    <string name="hello_user">"Hello "</string>
    <string name="back">Back</string>
    <string name="forward">forward</string>
    <string name="action_edit">Edit…</string>
    <string name="down">Down</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="save_file">Do you want to save this Fret?</string>
    <string name="fret_saved">Fret saved to: </string>
    <string name="save_failed">Failed to save Fret</string>
    <string name="action_del_track">Delete Track</string>
    <string name="action_solo_track">Make Solo track</string>
    <string name="action_rename_track">Rename Track…</string>
    <string name="action_test">MidiTest</string>
    <string name="solo_track">(Solo Track)</string>
    <string name="action_publish">Publish…</string>
    <string name="published">" published"</string>
    <string name="no">No</string>
    <string name="track">Track</string>
    <string name="action_save_fret">Save song</string>
    <string name="track_details">Please enter the Track details</string>
    <string name="track_name">Track:</string>
    <string name="fret_events">Fret events: %d</string>
    <string name="tracks">Tracks</string>
    <string name="edit_song">Edit Song</string>
    <string name="edit_track">Edit Track</string>
    <string name="no_network">No network connection</string>
    <string name="events">Events</string>
    <string name="backing_track">(Backing Track)</string>
    <string name="login_signup_text">Welcome to Frets.\n\nPlease login if you are an existing user or SIGN UP if you are new.</string>
    <string name="drum_track">Drum Track</string>
    <string name="delete_button_help">Use this button to delete this track</string>
    <string name="select_button_help">Use this button to edit the fret positions</string>
    <string name="miditest">Midi Test</string>
    <string name="drums">drums</string>
    <string name="load_failed">Oops! File problem:</string>
    <string name="too_many_tracks">You have too many tracks - maximum three</string>
    <string name="action_preview_fret">Preview…</string>
    <string name="group_frets">Do you want to group the notes around fret: %1$s</string>
    <string name="solo_track_is_drums">Oi numbnuts.  The Solo track can\'t be a drum track!</string>
    <string name="midi_file_error">There was a problem importing the midi file:</string>
    <string name="permission_required">You won\'t be able to import Midi files if you don\'t allow access to the disk</string>
    <string name="event_count">%1$d/%2$d</string>

    <string-array name="midi_instrument_names">
        <item>Acoustic Grand Piano</item>
        <item>Bright Acoustic Piano</item>
        <item>Electric Grand Piano</item>
        <item>Honky-tonk Piano</item>
        <item>Electric Piano 1</item>
        <item>Electric Piano 2</item>
        <item>Harpsichord</item>
        <item>Clavi</item>
        <item>Celesta</item>
        <item>Glockenspiel</item>
        <item>Music Box</item>
        <item>Vibraphone</item>
        <item>Marimba</item>
        <item>Xylophone</item>
        <item>Tubular Bells</item>
        <item>Dulcimer</item>
        <item>Drawbar Organ</item>
        <item>Percussive Organ</item>
        <item>Rock Organ</item>
        <item>Church Organ</item>
        <item>Reed Organ</item>
        <item>Accordion</item>
        <item>Harmonica</item>
        <item>Tango Accordion</item>
        <item>Acoustic Guitar (nylon)</item>
        <item>Acoustic Guitar (steel)</item>
        <item>Electric Guitar (jazz)</item>
        <item>Electric Guitar (clean)</item>
        <item>Electric Guitar (muted)</item>
        <item>Overdriven Guitar</item>
        <item>Distortion Guitar</item>
        <item>Guitar harmonics</item>
        <item>Acoustic Bass</item>
        <item>Electric Bass (finger)</item>
        <item>Electric Bass (pick)</item>
        <item>Fretless Bass</item>
        <item>Slap Bass 1</item>
        <item>Slap Bass 2</item>
        <item>Synth Bass 1</item>
        <item>Synth Bass 2</item>
        <item>Violin</item>
        <item>Viola</item>
        <item>Cello</item>
        <item>Contrabass</item>
        <item>Tremolo Strings</item>
        <item>Pizzicato Strings</item>
        <item>Orchestral Harp</item>
        <item>Timpani</item>
        <item>String Ensemble 1</item>
        <item>String Ensemble 2</item>
        <item>SynthStrings 1</item>
        <item>SynthStrings 2</item>
        <item>Choir Aahs</item>
        <item>Voice Oohs</item>
        <item>Synth Voice</item>
        <item>Orchestra Hit</item>
        <item>Trumpet</item>
        <item>Trombone</item>
        <item>Tuba</item>
        <item>Muted Trumpet</item>
        <item>French Horn</item>
        <item>Brass Section</item>
        <item>SynthBrass 1</item>
        <item>SynthBrass 2</item>
        <item>Soprano Sax</item>
        <item>Alto Sax</item>
        <item>Tenor Sax</item>
        <item>Baritone Sax</item>
        <item>Oboe</item>
        <item>English Horn</item>
        <item>Bassoon</item>
        <item>Clarinet</item>
        <item>Piccolo</item>
        <item>Flute</item>
        <item>Recorder</item>
        <item>Pan Flute</item>
        <item>Blown Bottle</item>
        <item>Shakuhachi</item>
        <item>Whistle</item>
        <item>Ocarina</item>
        <item>Lead 1 (square)</item>
        <item>Lead 2 (sawtooth)</item>
        <item>Lead 3 (calliope)</item>
        <item>Lead 4 (chiff)</item>
        <item>Lead 5 (charang)</item>
        <item>Lead 6 (voice)</item>
        <item>Lead 7 (fifths)</item>
        <item>Lead 8 (bass + lead)</item>
        <item>Pad 1 (new age)</item>
        <item>Pad 2 (warm)</item>
        <item>Pad 3 (polysynth)</item>
        <item>Pad 4 (choir)</item>
        <item>Pad 5 (bowed)</item>
        <item>Pad 6 (metallic)</item>
        <item>Pad 7 (halo)</item>
        <item>Pad 8 (sweep)</item>
        <item>FX 1 (rain)</item>
        <item>FX 2 (soundtrack)</item>
        <item>FX 3 (crystal)</item>
        <item>FX 4 (atmosphere)</item>
        <item>FX 5 (brightness)</item>
        <item>FX 6 (goblins)</item>
        <item>FX 7 (echoes)</item>
        <item>FX 8 (sci-fi)</item>
        <item>Sitar</item>
        <item>Banjo</item>
        <item>Shamisen</item>
        <item>Koto</item>
        <item>Kalimba</item>
        <item>Bag pipe</item>
        <item>Fiddle</item>
        <item>Shanai</item>
        <item>Tinkle Bell</item>
        <item>Agogo</item>
        <item>Steel Drums</item>
        <item>Woodblock</item>
        <item>Taiko Drum</item>
        <item>Melodic Tom</item>
        <item>Synth Drum</item>
        <item>Reverse Cymbal</item>
        <item>Guitar Fret Noise</item>
        <item>Breath Noise</item>
        <item>Seashore</item>
        <item>Bird Tweet</item>
        <item>Telephone Ring</item>
        <item>Helicopter</item>
        <item>Applause</item>
        <item>Gunshot</item>
    </string-array>
    <string-array name="fret_instrument_names">
        <item>Guitar</item>
        <item>Bass</item>
        <!--        <item>Ukelele</item>-->
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="my_frets_tab_text">My Frets</string>
    <string name="public_frets_tab_text">Public Frets</string>
    <string name="delete_fret">Delete Fret</string>
    <string name="fretlist_options">Fret Options</string>
    <string name="publish_fret">Publish...</string>
    <string name="new_frets">New Frets</string>
    <string name="song_name_label">Song:</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="view_profile">Profile</string>
    <string name="member_since">Joined:</string>
    <string name="members_profile_picture">Members profile picture</string>
    <string name="website_url">Website url:</string>
    <string name="save">Save</string>
    <string name="bio">Biography:</string>
    <string name="User">User:</string>
    <string name="name_required">Please give your Fret a name</string>
    <string name="search_title">Search Frets</string>
    <string name="empty_fretlist">No Frets yet.</string>
    <string name="instrument_voice">Instrument Voicing:</string>
    <string name="fret_instrument">Instrument Type:</string>
    <string name="thumbnail_description">A thumbnail picture of the person who created this Fret</string>
    <string name="follow_notes">Follow</string>
    <string name="synths_text">Synths</string>
    <string name="select_synth">Synth</string>
    <string name="synth_error">\"Unable to open synth: \"</string>

</resources>
