<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_import"
        android:title="@string/import_midi"
        android:icon="@drawable/ic_action_import"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_view_profile"
        android:icon="@mipmap/ic_default_user_icon"
        android:orderInCategory="100"
        android:title="@string/view_profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_select_synth"
        android:title="@string/select_synth"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>
