<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/members_profile_picture"
        app:srcCompat="@drawable/default_user_icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_label"
            android:layout_width="191dp"
            android:layout_height="16dp"
            android:ems="10"
            android:text="@string/User"
            tools:layout_editor_absoluteX="-33dp"
            tools:layout_editor_absoluteY="36dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="12dp"
            android:layout_height="42dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:inputType="text"
            android:text="User name goes here" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="136dp"
            android:layout_height="35dp"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_datejoined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/member_since" />

        <TextView
            android:id="@+id/date_joined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="12dp">

        <TextView
            android:id="@+id/website_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/website_url" />

        <EditText
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="12dp">

        <TextView
            android:id="@+id/bio_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/bio" />

        <EditText
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:inputType="text"/>
    </LinearLayout>
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/save" />

</LinearLayout>