<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/layout1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fretviewer.FretViewActivity">

    <EditText
        android:id="@+id/song_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_material"
        android:paddingEnd="@dimen/padding_material"
        android:paddingStart="@dimen/padding_material"
        android:paddingBottom="@dimen/padding_material"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="0.05"
        android:inputType="textCapWords"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Spinner
            android:id="@+id/track_spinner"
            android:paddingTop="@dimen/padding_material"
            android:paddingEnd="@dimen/padding_material"
            android:paddingStart="@dimen/padding_material"
            android:paddingBottom="@dimen/padding_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTrackName"
            android:src="@android:drawable/ic_menu_edit"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_delete"
            android:id="@+id/deleteTrack"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_material"
            android:paddingEnd="@dimen/padding_material"
            android:paddingStart="@dimen/padding_material"
            android:paddingBottom="@dimen/padding_material"
            android:text="@string/solo_track"
            android:id="@+id/checkBox"
            />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.85">

        <view
            android:id="@+id/fretview"
            class="com.bondevans.frets.freteditor.FretEditView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.05">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev"
            android:id="@+id/prev_button"
            tools:ignore="Suspicious0dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:id="@+id/next_button"
            tools:ignore="Suspicious0dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/up"
            android:id="@+id/up_button"
            tools:ignore="Suspicious0dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/down"
            android:id="@+id/down_button"
            tools:ignore="Suspicious0dp"/>

    </LinearLayout>


</LinearLayout>
